--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: J2objc Gradle
-description: Asdf
+title: J2objc Gradle Support
+description: Gradle plugin and libraries for J2objc
