--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: J2objc Gradle
 description: Gradle plugin and libraries for J2objc development
+google_analytics: UA-101147450-2
