--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: J2objc Gradle
+title: J2objc Packager for Gradle
 description: Gradle plugin and libraries for J2objc development
 google_analytics: UA-101147450-2
